--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 DB_URL =
   "mongodb+srv://kanlyte:<password>@cluster0.5li3mdy.mongodb.net/?retryWrites=true&w=majority";
+
+AWS_BUCKET_NAME="lyteapp"
+AWS_BUCKET_REGION="eu-central-1"  
+AWS_ACCESS_KEY=AKIAQL6W5CHCQ4PZQDVS
+AWS_SECRET_KEY=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
