--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/kanlyte/LyteApi#readme",
   "dependencies": {
+    "aws-sdk": "^2.1286.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "firebase-admin": "^11.4.1",
+    "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
